// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expect_specInterpreter_to_match_snapshots 1`] = `
Object {
  "body": Object {
    "foo": "bar",
  },
  "method": "put",
  "url": "/pet",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 2`] = `
Object {
  "body": Object {
    "foo": "bar",
  },
  "method": "post",
  "url": "/pet",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 3`] = `
Object {
  "body": undefined,
  "method": "get",
  "url": "/pet/findByStatus",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 4`] = `
Object {
  "body": undefined,
  "method": "get",
  "url": "/pet/findByTags",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 5`] = `
Object {
  "body": undefined,
  "method": "get",
  "url": "/pet/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 6`] = `
Object {
  "body": undefined,
  "method": "post",
  "url": "/pet/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 7`] = `
Object {
  "body": undefined,
  "method": "delete",
  "url": "/pet/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 8`] = `
Object {
  "body": undefined,
  "method": "post",
  "url": "/pet/foobar/uploadImage",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 9`] = `
Object {
  "body": undefined,
  "method": "get",
  "url": "/store/inventory",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 10`] = `
Object {
  "body": undefined,
  "method": "post",
  "url": "/store/order",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 11`] = `
Object {
  "body": undefined,
  "method": "get",
  "url": "/store/order/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 12`] = `
Object {
  "body": undefined,
  "method": "delete",
  "url": "/store/order/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 13`] = `
Object {
  "body": undefined,
  "method": "post",
  "url": "/user",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 14`] = `
Object {
  "body": undefined,
  "method": "post",
  "url": "/user/createWithList",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 15`] = `
Object {
  "body": undefined,
  "method": "get",
  "url": "/user/login",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 16`] = `
Object {
  "body": undefined,
  "method": "get",
  "url": "/user/logout",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 17`] = `
Object {
  "body": undefined,
  "method": "get",
  "url": "/user/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 18`] = `
Object {
  "body": undefined,
  "method": "put",
  "url": "/user/foobar",
}
`;

exports[`expect_specInterpreter_to_match_snapshots 19`] = `
Object {
  "body": undefined,
  "method": "delete",
  "url": "/user/foobar",
}
`;
